--- a/site/cartographies-des-villes.html
+++ b/site/cartographies-des-villes.html
@@ -240,7 +240,7 @@
                 <div class="silex-element-content normal"><span style="font-family: georgia, serif;"><font size="3"><span style="color: rgb(255, 255, 255);">Continuum - Récits et savoir LGBTQI+</span></font>
                     </span>
                 </div>
-            </div><a href="cartographie-notre-histoire-compte.html" data-silex-type="image" class="editable-style image-element parcours-img silex-id-1561622623616-0 page-cartographies-des-villes paged-element" style=""><img src="assets/carte_recto.png" class="silex-element-content"></a><div data-silex-type="text" class="editable-style text-element silex-id-1542031705820-5" style="">
+            </div><a href="cartographie-notre-histoire-compte.html" data-silex-type="image" class="editable-style image-element parcours-img silex-id-1561622623616-0 page-cartographies-des-villes paged-element" style=""><img src="assets/carte_recto.png" class="silex-element-content"></a><div data-silex-type="text" class="editable-style text-element silex-id-1542031705820-5 page-cartographies-des-villes paged-element page-link-active" style="">
                 <div class="silex-element-content normal">Notre Histoire compte
                 </div>
             </div></div>
