--- a/site/parcours-ovida-delect.html
+++ b/site/parcours-ovida-delect.html
@@ -251,9 +251,10 @@ donner la parole à Ovida. Les extraits, qui accompagnent les 14
 étapes de la première partie de la cartographie, sont les écrits
 qu’elle a constitués au début des années 90. 
 </p>
-<p>Le nom d’Ovida Delect
-sera bientôt donné à une rue de Paris. Nous l’espérons et nous
-y contribuerons.</p>
+<p>
+Le nom d'Ovida a été donné à une place du <a href="https://fr.wikipedia.org/wiki/Place_Ovida-Delect">4eme arrondissement de Paris</a>. L'inauguration de la plaque a eu le 19 juin 2019 à l'occasion de la <a href="https://www.france24.com/fr/20190628-france-paris-anne-hidalgo-hommage-personnes-lgbt-places-rues">41eme édition de la Marche des Fiertés</a> et également à l'occasion des 75 ans de la Libération de Paris.
+
+</p>
 
 </div>
             </div></div>
